k8s/environments/dev/api.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api
  namespace: dev
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api # has to match .spec.template.metadata.labels
  revisionHistoryLimit: 1
  #replicas: 4
  strategy:
    canary:
      trafficRouting:
        trafficRouting:
        managedRoutes:
          - name: set-version
        istio:
          virtualService:
            name: api-vsvc # required
            routes:
              - primary # optional if there is a single route in VirtualService, required otherwise
          destinationRule:
            name: api-destrule # required
            canarySubsetName: canary # required
            stableSubsetName: stable # required
      steps:
        - setCanaryScale:
            weight: 50
        - setHeaderRoute:
            name: set-version
            match:
              - headerName: Version
                headerValue:
                  prefix: 'subset-canary'
        - pause: {}
        #            duration: 1m #Remove this line when releasing compatibility change.
        - setHeaderRoute:
            name: set-version
  template:
    metadata:
      labels:
        app: api # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: api
          image: niazovd/api:v5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vsvc
  namespace: dev
spec:
  hosts:
    - '*'
  gateways:
    - gateway
  http:
    - name: primary
      match:
        - uri:
            prefix: /api
          ignoreUriCase: true #case-Insensitive
      route:
        - destination:
            host: api-service
            subset: stable # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
          weight: 100
        - destination:
            host: api-service
            subset: canary # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
          weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-destrule
  namespace: dev
spec:
  host: api-service
  subsets:
    - name: canary # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      labels: # labels will be injected with canary rollouts-pod-template-hash value
        app: api
    - name: stable # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      labels: # labels will be injected with stable rollouts-pod-template-hash value
        app: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80
      protocol: TCP
      name: http
