k8s/environments/dev/simpleapi-prod.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simpleapi-prod
  namespace: api
  labels:
    app: simpleapi-prod
spec:
  selector:
    matchLabels:
      app: simpleapi-prod # has to match .spec.template.metadata.labels
  revisionHistoryLimit: 1 
  #replicas: 4
  strategy:
    canary:
      stableService: simpleapi-prod-stable-service    #required
      canaryService: simpleapi-prod-canary-service    #required
      trafficRouting:
        istio:
         virtualService:
           name: rollout-vsvc                         # required                              # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setWeight: 50
      - pause:
          duration: 10m
#         # - setWeight: 20
#         # - setHeaderRoute: # enable header based traffic routing where
#         #     name: "set-header-1"
#         #     match:
#         #     - headerName: ApiVersion # Custom-Header1=Mozilla
#         #       headerValue:
#         #         exact: 2.0.0 #headerValue- contains exactly one of exact - specify the exact header value, regex - value in a regex format, prefix - the prefix of the value could be provided. Not all traffic routers will support all match types. 
  template:
    metadata:
      labels:
        app: simpleapi-prod # has to match .spec.selector.matchLabels        
    spec:
      containers:
        - name: simpleapi
          image: niazovd/api:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
  namespace: api
spec:
  gateways:
    - gateway
  hosts:
    - simpleapi-dev
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: simpleapi-prod-stable-service # referenced in canary.stableService
      weight: 100
    - destination:
        host: simpleapi-prod-canary-service # referenced in canary.canaryService
      weight: 0
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-prod-stable-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: simpleapi-prod
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80 #This port should match with the port application is targetting in this case: containerPort: 8002.
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-prod-canary-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: simpleapi-prod
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80 #This port should match with the port application is targetting in this case: containerPort: 8002.
      protocol: TCP    
      name: http
